secondfile/objects/DHStatus_CommonSummary__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
    <fields>
        <fullName>Cleanup_Status__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Cleanup Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Common Summary</relationshipLabel>
        <relationshipName>DHStatus_Common_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_Reason_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Outcome Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Reason__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Outcome Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_End_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Test End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Request_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Test Request Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Start_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Test Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_State__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Test State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Status_Summary__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Summary</description>
        <label>Test Status Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Common Summary</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>DHStatus-CommonSummary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Common Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>